fix(YALB-mega-footer-2): social link column bottom margin adjustment - more on mobile

--- a/components/02-molecules/link-group/_yds-link-group.scss
+++ b/components/02-molecules/link-group/_yds-link-group.scss
@@ -72,11 +72,11 @@ $break-link-group-max: $break-link-group - 0.05;
 
   width: 100%;
   border-left: var(--thickness-divider) solid var(--color-link-group-border);
-  margin-bottom: var(--size-spacing-3);
 
   &--one {
     @media (max-width: $break-link-group-max) {
       grid-area: links-one;
+      margin-bottom: var(--size-spacing-8);
     }
   }
 
@@ -88,6 +88,7 @@ $break-link-group-max: $break-link-group - 0.05;
 
   @media (min-width: $break-link-group) {
     flex: 0 0 50%;
+    margin-bottom: var(--size-spacing-3);
   }
 }
 
